# server/docs/swagger.json
@@ -209,7 +209,10 @@
                 "node_list": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/system.Coordinate"
+                        "type": "array",
+                        "items": {
+                            "type": "number"
+                        }
                     }
                 },
                 "status_code": {
@@ -217,17 +220,6 @@
                 },
                 "status_msg": {
                     "type": "string"
-                }
-            }
-        },
-        "system.Coordinate": {
-            "type": "object",
-            "properties": {
-                "latitude": {
-                    "type": "number"
-                },
-                "longitude": {
-                    "type": "number"
                 }
             }
         },
@@ -329,7 +321,7 @@
         "ApiKeyAuth": {
             "type": "apiKey",
             "name": "token",
-            "in": "query"
+            "in": "header"
         }
     }
 }
